syntax = "proto3";

option csharp_namespace = "ServiceA";

package ServiceA;

service ServiceA {
    rpc GetItem (GetItemRequest) returns (GetItemResponse);
}

message GetItemRequest {
    string message = 1;
}

message GetItemResponse {
    string message = 1;
}